--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ forge_version=47.2.0
 forge_version_range=[47,)
 loader_version_range=[47,)
 
-# ?????????? ??????????? ???????? (??? parchment, ???? ?????? ??? ? smogline)
+# ?????????? ??????????? ???????? (??? parchment, ???? ?????? ??? ? substractum)
 mapping_channel=official
 mapping_version=1.20.1
 
